migrates from gradle 5.2.1 to 7, updates tests